# django-easy-settings

./: README.md  pyproject.toml
easy_settings/: models.py  services.py  settings.py
