[tool.poetry]
name = "django-easy-settings"
version = "0.1.0"
description = "A Django package which lets you easily create a schema and store settings in a database."
authors = ["Arion Sejdia <arion.sejdia@protonmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
